# cesrinf

./: Cargo.toml  README.md  deploy-wasm.sh
.cargo/: config.toml
cesriding/: Cargo.toml  README.md
cesriding/src/: lib.rs  main.rs
cesrinf/: Cargo.toml  README.md
cesrinf-cli/: Cargo.toml  README.md  examples.sh
cesrinf-cli/src/: main.rs
cesrinf-wasm/: Cargo.toml
cesrinf-wasm/src/: domain.rs  error.rs  lib.rs  parser.rs
cesrinf-web/: Cargo.toml  README.md
cesrinf-web/src/: main.rs
cesrinf-web/static/: cesrinf_wasm_bg.wasm
cesrinf-web/templates/: base.html  index.html
cesrinf/src/: base64_conversions.rs  colder.rs  computations.rs  error.rs  lib.rs  main.rs  parser.rs
cesrinf/src/decoder/: handcrafted_decoder.rs  mod.rs
cesrinf/src/domain/: indexer.rs  matter.rs  mod.rs
cesrinf/tests/: code_trees.rs
cesrinf/tests/common/: mod.rs
cesrinfo-web/: Cargo.toml  README.md
cesrinfo-web/src/: main.rs  routes.rs
cesrinfo-web/static/: cesrinf_wasm.js  cesrinf_wasm_bg.wasm  index.js  styles.css
cesrinfo-web/templates/: base.html  index.html
docs/: .gitignore  thesis.md
src/: base62.rs  colder.rs  computations.rs  error.rs  lib.rs  main.rs  parser.rs  tables.rs
src/decoder/: handcrafted_decoder.rs  mod.rs
src/domain/: indexer.rs  matter.rs  mod.rs
src/tables/: indexer.rs  mod.rs
tests/: codes_and_indices.rs
tests/common/: mod.rs
web/: README.md  link-static-dir.sh
web/cesrinf-web/: Cargo.toml  Dockerfile
web/cesrinf-web-docker/: Cargo.toml  Dockerfile  README.md
web/cesrinf-web-docker/src/: main.rs  routes.rs
web/cesrinf-web-spin/: .gitignore  Cargo.toml  deploy.sh  run.sh  spin.toml
web/cesrinf-web-spin/cesr/: Cargo.toml
web/cesrinf-web-spin/cesr/src/: lib.rs
web/cesrinf-web-spin/index/: Cargo.toml
web/cesrinf-web-spin/src/: lib.rs
web/cesrinf-web-spin/static/: cesrinf_wasm.js
web/cesrinf-web-wasmer/: .gitignore  Cargo.toml  app.yaml  askama.toml  deploy.sh  run.sh  wasmer.toml
web/cesrinf-web-wasmer/src/: main.rs  routes.rs
web/cesrinf-web-wasmer/static/: cesrinf_wasm.js  cesrinf_wasm_bg.wasm  index.js
web/cesrinf-web/src/: main.rs
web/common-web/: Cargo.toml
