[package]
name = "cesrinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
cesrox = "0.1.4"
clap = { version = "4.5.0", features = ["derive"] }
nom = "7.1.3"
rstest = "0.18.2"
serde = "1.0.196"
serde_json = "1.0.113"
