[workspace]
members = [
    "cesriding",
    "cesrinf",
    "cesrinf-cli",
    "cesrinf-wasm",
    "web/cesrinf-web",
    "web/common-web",
]
exclude = ["web/cesrinf-web-wasmer"]
resolver = "2"

[workspace.dependencies]
axum = "0.7.4"
colored = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
