[workspace]
members = ["cesriding", "cesrinf", "cesrinf-cli", "cesrinf-wasm"]
exclude = [
    "web/cesrinf-web-docker",
    "web/cesrinf-web-spin",
    "web/cesrinf-web-wasmer",
]
resolver = "2"

[workspace.dependencies]
colored = "2.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
