[package]
name = "cesrinf-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cesrinf = { path = "../cesrinf" }

console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.68"
ouroboros = "0.18.3"
wasm-bindgen = "0.2.91"
web-sys = { version = "0.3.68", features = [
    'Document',
    'Element',
    'HtmlElement',
] }
