[package]
name = "cesrinf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
clap = { version = "4.5.0", features = ["derive"] }
colored = "2.1.0"
rstest = "0.18.2"
serde = "1.0.196"
serde_json = "1.0.113"
