[package]
name = "cesrinf-web-docker"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.4"
askama = { version = "0.12.1", features = ["markdown"] }
askama_axum = "0.4.0"
axum-extra = "0.9.2"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
