[package]
name = "cesrinf-web-wasmer"
version = "0.1.0"
edition = "2021"

[dependencies]
cesrinf = { path = "../../cesrinf" }

askama = { version = "0.12.1", features = ["markdown"] }
askama_axum = "0.3.0"
axum = { version = "=0.6.9", features = ["tokio", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

# NOTE: Pin and replace some dependencies to achieve wasix compatibility.
tokio = { version = "=1.24.2", default-features = false, features = ["full"] }
parking_lot = { version = "=0.12.1", features = ["nightly"] }

[patch.crates-io]
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.24.2" }
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "master" }
