[package]
name = "index"
authors = ["Stănilă Ioan <ioanstanilais@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cesrinf = { path = "../../../cesrinf" }

anyhow = "1"
askama = { version = "0.12.1", features = ["markdown"] }
bytes = "1"
http = "0.2"
spin-sdk = "2.2.0"
